--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,9 +1,29 @@
+
 node {
-    stage('build and run') {
-    git 'https://github.com/priximmo/jenkins-helloworld.git'
-    sh label: '', script: '''
-    javac Main.java
-    java Main
-    '''
+
+   def registryProjet='registry.gitlab.com/xavki/presentations-jenkins'
+   def IMAGE="${registryProjet}:version-${env.BUILD_ID}"
+
+    stage('Clone') {
+          checkout scm
     }
+
+    def img = stage('Build') {
+          docker.build("$IMAGE",  '.')
+    }
+
+    stage('Run') {
+          img.withRun("--name run-$BUILD_ID -p 80:80") { c ->
+            sh 'curl localhost'
+          }
+    }
+
+    stage('Push') {
+          docker.withRegistry('https://registry.gitlab.com', 'reg1') {
+              img.push 'latest'
+              img.push()
+          }
+    }
+
 }
+
